<resources>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut</string>

    <string name="app_name">Tarjetas_App</string>
    <string name="mensaje_login">Ingresa a:</string>
    <string name="banco_banorte">Tarjetas Banorte</string>
    <string name="Usuario_placeholder">Usuario</string>
    <string name="Password_Placeholder">Contraseña</string>
    <string name="button_login1">Continuar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="etiqueta_notificaciones">NOTIFICACIONES</string>
    <string name="mensaje_password">Ingresa tu Clave:</string>
    <string name="saludo">Saludos</string>
    <string name="LogOut">Salir</string>
    <string name="TitleMisTarjetas">Mis Tarjetas</string>
    <string name="SolicitaCelularBienvenida">Ingresa tu tarjeta de crédito Banorte: </string>
    <string name="Celular">( +52 )</string>
    <string name="preguntaCelular">Este número ya está registrado a una cuenta. ¿Quieres mantener ésta cuenta o crear una nueva?</string>
    <string name="crearCuentaNueva">Crear Nueva</string>
    <string name="continuarCuenta">Continuar</string>
    <string name="TitleApp">Tarjetas Banorte</string>
    <string name="lblAltaUsuario">ALTA DE USUARIO</string>
    <string name="lblNombreUsuario">Cuenta</string>
    <string name="hintNombreUsuario">Cuenta con la que desea identificarse</string>
    <string name="lblAppPaterno">Apellido Paterno</string>
    <string name="hintApellidoPaterno">Apellido del Titular</string>
    <string name="lblAppMaterno">Apellido Materno</string>
    <string name="hintApellidoMaterno">Apellido del Titular</string>
    <string name="lblUsuario">Usuario</string>
    <string name="hintUsuarioFormulario">Usuario con el que accederá a la aplicación</string>
    <string name="lblContraseñaFormulario">Contraseña</string>
    <string name="hintContraseñFormulario">Contraseña con la que accederá</string>
    <string name="hintContraseñRepetir">Confirmar contraseña anterior</string>
    <string name="lblConfirmarContraseña">Confirma Contraseña</string>
    <string name="lblCorreoElectronico">Correo Electronico</string>
    <string name="hintCorreoElectronico">Correo al que se notificarán sus movimientos</string>
    <string name="btnCrearUsuario">Crear cuenta</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="MensajeOpcionesMetodoSeguridad">Se le enviará un código de seguridad. ¿Qué método prefiere que se le sea envíado su código de seguridad?</string>
    <string name="EtiquetaMail">email</string>
    <string name="Etiquetasms">sms</string>
    <string name="lblCodigoSeguridadAviso">Favor de introducir el Código de Seguridad que se te ha proporcionado:</string>
    <string name="avisoPrivacidad">BANORTE, Inc. (que opera como BANORTE) y sus empresas afiliadas (en adelante denominadas conjuntamente "BANORTE") respetan su privacidad. BANORTE protege y es responsable por sus datos personales. Este aviso de privacidad para el programa Priceless MEXICO (en adelante denominado, el “Aviso de Privacidad”) describe los tipos de información personal que recolectamos bajo dichos programas, la forma en la que es utilizada, con quién la compartimos y las decisiones que usted puede tomar acerca del uso que le damos a su información personal.</string>
    <string name="btnAceptarAviso">Aceptar</string>

    <string name="MensajeSMSMetodoSeguridad">Se le enviará un código de seguridad por medio de mensaje SMS.</string>
    <string name="MensajeEmailMetodoSeguridad">Se le enviará un código de seguridad al correo ingresado.</string>
    <string name="MensajeSinOpcionesSeguridad">Error al crear el usuario, no cuenta con opciones para mandar codigo de seguridad.</string>

    <string name="RegresarButton">Regresar</string>
    
    <string name="MensajeBloquearTarjetaTitulo">¿Estas seguro de ejecutar esta operación?</string>
    <string name="MensajeBloquearTarjeta">Todas las transacciones serán declinadas, no podrás hacer compras temporalmente.</string>
    <string name="btnConfirmar">Confirmar</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="MensajeDesbloquearTarjeta">Su tarjeta ha sido habilitada nuevamente para hacer compras</string>
    <string name="MensajeDesbloquearTarjetaTitulo">Control de Tarjeta</string>

    <string name="btnRoboExtravio">Reportar Tarjeta</string>
    <string name="btnRoboExtravioReportada">Tarjeta Reportada</string>

    <string name="ReporteRoboTitulo">¿Estas seguro de reportar tu tarjeta como robada y/o extraviada?</string>
    <string name="ReporteRoboMensaje">Se cancelará tu plastico actual y te enviaremos un plastico nuevo.</string>

    <string name="LineaTitularTotal">Línea Titular Total</string>
    <string name="TarjetaTitular">Tarjeta Titular</string>
    <string name="TarjetaAdicional">Tarjeta Adicional</string>
    <string name="ModificarLinea"><u>¿Quieres modificar la línea?</u></string>
    <string name="SolicitarAumentoLinea">¿Quieres solicitar un aumento de tu línea actual de crédito? Solícitala aquí.</string>

    <string name="titleDialogAumentarLinea">Linea de Crédito</string>
    <string name="mensajeDialogAumentarLinea1">Esta solicitando un aumento de su Línea de credito actual de </string>
    <string name="mensajeDialogAumentarLinea2">, ¿Esta de acuerdo en esta acción?</string>
    <string name="mensajeAumentoDeLineaAceptada">Su solicitud ha sido recivida en breve le enviaremos una respuesta a su petición.</string>

    <string name="btnSolicitarNip">Obtener NIP</string>
    <string name="dialogTitleSolicitarNip">Asignación de NIP</string>
    <string name="dialogMensajeSolicitarNip">Su NIP llegara a la sección de Notificaciones, le recordamos que este mes no estamos cobrando comisión por dispisición de efectivo.</string>
    <string name="lblIngresarNip">Por favor tecle su NIP de 4 dígitos, no consecutivos, no repetidos los cuatro numeros.</string>


    <string name="btnActivarDesdeSEguimiento">¿Quieres activarla ahora?, da click aquí.</string>
    <string name="btnActivar">Activar</string>
    <string name="btnDesactivar">Desactivar</string>
    <string name="dialogMensajeActivarTarjeta">¿Desea activar esta tarjeta?</string>
    <string name="dialogTituloActivaciones">Activaciones</string>
    <string name="dialogMensajeActivaciones1">Felicidades !! Su tarjeta terminacion</string>
    <string name="dialogMensajeActivaciones2">ha sido activada, ahora puede gozar de los múltiples beneficios que le brinda su tarjeta</string>
    <string name="btnAplicar">Aplicar</string>

    <string name="dialogTituloConfirmarAumetarLinea">Estas seguro de modificar la línea de crédito de tu tarjeta adicional</string>
    <string name="dialogTituloAumentarLinea">Línea de crédito actualizada</string>
    <string name="dialogMensajeAumtentarLinea">Su solicitud ha sido recibida en brebe le enviaremos una respuesta a su petición.</string>

    <string name="tool_bar_agregar">Agregar Tarjeta</string>

    <string name="lblSeguimientoTitulo">Mensajería</string>

    <string name="hintNombreCategoria">Nombre de la Categoria</string>
    <string name="dialogTituloSeleccionarImagenCategoria">Selecciona una imagen:</string>

    <string-array name="spn_array">
        <item>Mensual</item>
        <item>Semanal</item>
        <item>Quincenal</item>
    </string-array>
    <string-array name="spn_periodos">
        <item>Mes Actual</item>
        <item>Mes Anterior</item>
        <item>Dos Meses Atras</item>
    </string-array>


    <string name="tab_title_recomendados">Recomendado</string>
    <string name="tab_title_favoritos">Mis Favoritos</string>
    <string name="tab_title_mas_productos">Mas productos</string>
</resources>
