<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/banner"
        android:elevation="4dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_marginTop="85dp"
        android:id="@+id/lblUsuario"
        android:text="@string/mensaje_login"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banco_banorte"
        android:id="@+id/lblBancoNombre"
        android:layout_below="@+id/lblMensajeLogin"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lblBancoNombre"
        android:drawableLeft="@drawable/person_1"
        android:drawablePadding="10dp"
        android:hint="@string/Usuario_placeholder"
        android:id="@+id/txtUsuario"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="user"
        android:inputType="text"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsuario"
        android:text="@string/button_login1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:id="@+id/btnContinuar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="   "
        android:elevation="@dimen/floating_button"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification"
            android:layout_below="@id/btnContinuar"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="85dp"
            android:layout_toLeftOf="@+id/lblNotificacion"
            android:id="@+id/imgNotification"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_notificaciones"
            android:layout_below="@id/btnContinuar"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:id="@+id/lblNotificacion"
            android:textSize="15dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>
