<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        android:elevation="4dp"
        android:id="@+id/banner"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner"
        android:layout_marginBottom="78dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lblAltaUsuario"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                android:id="@+id/lblFormularioCabecera"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:gravity="left"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/lblNombreUsuario"
                android:layout_below="@id/lblFormularioCabecera"
                android:id="@+id/lblNombre"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:textSize="15dp"
                android:hint="@string/hintNombreUsuario"
                android:id="@+id/txtNombreUsuario"
                android:layout_below="@id/lblNombre"
                android:inputType="textCapSentences"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNombreUsuario"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:gravity="left"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/lblContraseñaFormulario"
                android:text="@string/lblContraseñaFormulario"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintContraseñFormulario"
                android:textSize="15dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/txtContraseñaFromulario"
                android:layout_below="@+id/lblContraseñaFormulario"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtContraseñaFromulario"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:gravity="left"
                android:textSize="18dp"
                android:textStyle="bold"
                android:id="@+id/blConfirmaContraseña"
                android:text="@string/lblConfirmarContraseña"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:hint="@string/hintContraseñRepetir"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/txtConfirmaContraseña"
                android:layout_below="@+id/blConfirmaContraseña"
                android:inputType="textPassword"/>
        </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:text="@string/btnCrearUsuario"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnCrearUsuario"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="10dp"
        android:elevation="@dimen/floating_button"/>
</RelativeLayout>
