<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/banner"
        android:src="@drawable/logo"
        android:elevation="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banner"
            android:id="@+id/lblSaludo"
            android:text="@string/saludo"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout="@+id/banner"
            android:id="@+id/lblUsuario"
            android:layout_marginTop="85dp"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_password"
        android:id="@+id/lblBancoNombre"
        android:layout_below="@+id/lblMensajeLogin"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/lblBancoNombre"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="10dp"
        android:hint="@string/Password_Placeholder"
        android:id="@+id/txtPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:text="@string/button_login1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:id="@+id/btnEvalPass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="   "/>





</LinearLayout>
