<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:src="@drawable/logo"
        android:elevation="4dp"
        android:id="@+id/banner"/>
    <TextView
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:text="@string/SolicitaCelularBienvenida"
       android:gravity="center_vertical"
       android:layout_marginRight="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginTop="85dp"
       android:layout_below="@+id/banner"
       android:id="@+id/lblCelularBienvenida"
       android:textSize="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/frameSeccionBienvenida"
        android:layout_below="@+id/lblCelularBienvenida">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/txtDisable"
            android:hint="@string/Celular"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/cellphone"
            android:layout_marginLeft="20dp"
            android:textIsSelectable="false"
            android:gravity="center"/>
        <EditText
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:id="@+id/txtCelularBienvenida"
            android:inputType="number|phone"
            android:textAlignment="center"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:text="@string/button_login1"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnRevisarCelular"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:elevation="4dp"
        android:layout_marginTop="0dp"
        android:layout_margin="8dp"/>
</RelativeLayout>
