<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list"
        android:orientation="horizontal"
        android:id="@+id/btnRegresarMenuServicios">
        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/RegresarButton"
            android:gravity="center_vertical"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/LineaTitularTotal"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lblLineaTitularTotal"
            android:gravity="center_vertical|right"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lstControlLineaCredito"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_list"
        android:orientation="horizontal"
        android:id="@+id/btnAumentarLineaCredito">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/SolicitarAumentoLinea"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"/>
        <ImageView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_right_red"/>
    </LinearLayout>
</LinearLayout>
