<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_list"
            android:orientation="horizontal"
            android:id="@+id/btnRegresarMenuServicios"
            android:background="@color/white">
            <ImageView
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:src="@drawable/back"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/RegresarButton"
                android:gravity="center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Menu"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lstAumentoLinea"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Linea Nueva: "
                android:paddingLeft="16dp"
                android:textSize="19dp"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="0.00"
                android:id="@+id/txtAumentoLinea"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_list"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/btnCancelar"
                android:textColor="@color/white"
                android:id="@+id/btnCancelarModificarLinea"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_list"
                android:layout_weight="1"
                android:background="@color/blueFacebook"
                android:text="@string/btnAplicar"
                android:textColor="@color/white"
                android:id="@+id/btnAceptarModificarLinea"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
